--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "lucide-react": "^0.525.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-table": "^7.8.0",
